<resources>
    <string name="app_name">Info Crew</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="nickname_s">Nickname(s)</string>
    <string name="founded">Founded</string>
    <string name="website">Website</string>
    <string name="name">Name</string>
    <string name="venue">Venue</string>
    <string name="overview">Overview</string>
    <string name="capacity">Capacity</string>
    <string name="staff">Staff</string>
    <string name="corporate">Corporate</string>
    <string name="manager">Manager</string>
    <string name="owner">Owner</string>
    <string name="chairman">Chairman</string>
    <string name="slash">-</string>
    <string name="home">Home</string>
    <string name="fixtires">Fixtires</string>
    <string name="results">Results</string>
    <string name="league">League</string>
    <string name="players">Players</string>
    <string name="championship_group">Championship Group</string>
    <string name="relegation_group">Relegation Group</string>
    <string name="team">Team</string>
    <string name="plusAndMin">+/-</string>
    <string name="p">P</string>
    <string name="d">D</string>
    <string name="D">D</string>
    <string name="l">L</string>
    <string name="P">P</string>
    <string name="premiership">Premiership</string>
    <string name="favorite_teams">Favorite teams</string>
</resources>